--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,16 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.0.4'
     compile 'com.ctrlplusz.anytextview:library:1.2'
     compile 'com.github.clans:fab:1.6.4'
+    compile 'com.github.zagum:Android-SwitchIcon:1.3.5'
     compile 'com.android.support:support-v4:26.+'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+}
+allprojects {
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
 }
