--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -25,22 +26,27 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':cosmocalendar')
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:recyclerview-v7:26.+'
-    compile 'com.android.support:cardview-v7:26.+'
-    compile 'com.android.support:design:26.+'
-    compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:recyclerview-v7:26.0.1'
+    compile 'com.android.support:cardview-v7:26.0.1'
+    compile 'com.android.support:design:26.0.1'
+    compile 'com.android.support:support-v4:26.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.jakewharton:butterknife:8.4.0'
     compile 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.0.4'
     compile 'com.ctrlplusz.anytextview:library:1.2'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.github.zagum:Android-SwitchIcon:1.3.5'
-    compile 'com.android.support:support-v4:26.+'
+    compile 'com.wdullaer:materialdatetimepicker:3.3.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
 allprojects {
     repositories {
         maven { url "https://jitpack.io" }
+        jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
