--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.github.zagum:Android-SwitchIcon:1.3.5'
     compile 'com.wdullaer:materialdatetimepicker:3.3.1'
+    compile 'org.jsoup:jsoup:1.10.3'
+    compile 'com.codemybrainsout.rating:ratingdialog:1.0.4'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
